--- a/job-portal-mern/src/App.css
+++ b/job-portal-mern/src/App.css
@@ -156,7 +156,7 @@ li {
 /* create a job page */
 
 .create-job-flex{
-  @apply flex flex-col lg:flex-row items-center justify-between gap-8;
+  @apply flex flex-col lg:flex-row lg:flex-wrap items-center justify-between gap-8;
 }
 
 .create-job-input{
